gitops/platform/traefik/authentik-callback-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: authentik-server
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.98.218.230
    ports:
      - name: http
        port: 80
        protocol: TCP
