gitops/platform/traefik/traefik-netbird-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-netbird
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
    twinbox.io/netbird-backend: "true"
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: webnetbird
      port: 8082
      protocol: TCP
      targetPort: webnetbird
