gitops/platform/traefik/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.__ZONE_NAME__`)
      services:
        - kind: Service
          name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-transport
  tls: {}
