gitops/platform/traefik/authentik-callback-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-authentik-callback
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.bierineenweek.nl`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-authentik-callback-netbird
  namespace: traefik
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`traefik.bierineenweek.nl`) && PathPrefix(`/outpost.goauthentik.io`)
      services:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
