gitops/platform/traefik/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.__ZONE_NAME__`) && PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: authentik
          kind: Service
          port: 80
    - match: Host(`traefik.__ZONE_NAME__`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
